Fixed background image distortion

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 p, 
 li{
     color: #F92C85;
+    background: rgba(0,0,0,0);
 }
 
 
-
+ul, ol{
+    background: rgba(0,0,0,0);
+}
 * {
     background-image: url(background.png);
 }
@@ -12,6 +15,7 @@ li{
 h1{
     
     color: #5EBEC4;
+    background: rgba(0,0,0,0);
 }
 
 img {
